Horizontal Scrolling bug fixed

--- a/components/ui/PaperList.module.scss
+++ b/components/ui/PaperList.module.scss
@@ -2,7 +2,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, 450px), 1fr));
   gap: 1.5rem;
 
   @media (max-width: 600) {
